# triton_client

./: start_triton_server.sh
triton-inference-server/: CLIENT_README.md  CMakeLists.txt  CMakeLists_simple.txt  CPP_CLIENT_README.md  README.md  client.cpp  client.py  docker-compose.yml  message.cpp  minimal_client.cpp  setup_env.sh.in  simple_client.cpp  simple_client.py
triton-inference-server/config/: triton.conf
triton-inference-server/model_repository/: convert2trt.sh
triton-inference-server/model_repository/Times_Classify/: config.pbtxt
triton-inference-server/model_repository/Times_Classify_TRT/: config.pbtxt  labels.txt
triton-inference-server/model_repository/Times_Classify_TRT_DYNAMIC/: config.pbtxt
triton-inference-server/scripts/: build_cpp_client.sh  install_client_deps.sh  start.sh  start_triton_server.sh  stop.sh
